2011-02-23  Xerxes Ranby  <xerxes@zafena.se>

	* Makefile.am: (JAMVM_BASE_URL): Switch to using IcedTea
	server for JamVM drops too.
	(JAMVM_VERSION): Updated to latest JamVM revision.
	(JAMVM_SHA256SUM): Updated.

2011-02-23  Denis Lila  <dlila@redhat.com>

	* Makefile.am: Added 2 patches.
	* NEWS: Updated.
	* patches/openjdk/6775317-non-AA-simple-shape-performance.patch
	* patches/openjdk/6766342-AA-simple-shape-performance.patch

2011-02-23  Andrew John Hughes  <ahughes@redhat.com>

	* INSTALL:
	Update with native2ascii option and JamVM.
	Mention --without-hotspot-build in HotSpot
	documentation.

2011-02-23  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(download-openjdk): Verify HotSpot tarball,
	regardless of source.
	* hotspot.map: Bump to latest hs20 (b10).

2011-02-22  Andrew John Hughes  <ahughes@redhat.com>

	Use more accurate ENABLE_CACAO rather
	than WITH_CACAO.
	* Makefile.am:
	Replace WITH_CACAO throughout.
	* acinclude.m4: Likewise.

2011-02-23  Xerxes Ranby  <xerxes@zafena.se>

	JamVM: Try --with-additional-vms=jamvm topping!
	* NEWS: Updated.
	* Makefile.am (stamps/add-jamvm.stamp): New make target.
	(clean-add-jamvm): Likewise.
	(stamps/add-jamvm-debug.stamp): Likewise.
	(clean-add-jamvm-debug): Likewise.
	(.PHONY): Add clean-add-jamvm and clean-add-jamvm-debug.
	(stamps/icedtea-against-icedtea.stamp): Add stamps/add-jamvm.stamp.
	(clean-icedtea-against-icedtea): Add clean-add-jamvm.
	(stamps/icedtea-debug-against-icedtea.stamp):
	Add stamps/add-jamvm-debug.stamp.
	(clean-icedtea-debug-against-icedtea): Add clean-add-jamvm-debug.
	* acinclude.m4 (IT_CHECK_ADDITIONAL_VMS):
	Set add_vm_jamvm if jamvm are found.
	(BUILD_JAMVM): Add check for add_vm_jamvm.
	(ADD_JAMVM_BUILD): New conditional dependent on add_vm_jamvm.

2011-02-23  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* Makefile.am: Add new patch.
	* patches/com-sun-awt.patch:
	This patch is used for updating file legacy.properties
	containing packages with non-standardized API
