@@ -177,6 +177,7 @@ IT_CHECK_WITH_CACAO_SRC_ZIP
 IT_CHECK_WITH_CACAO_SRC_DIR
 
 IT_CHECK_ENABLE_JAMVM
+IT_CHECK_WITH_JAMVM_SRC_ZIP
 
 IT_DISABLE_OPTIMIZATIONS
 IT_SET_SHARK_BUILD
