@@ -18,6 +18,8 @@ New in release 1.10 (2011-XX-XX):
 * Added out-of-the-box JamVM support using --enable-jamvm
 * Allow building of JamVM beside the default VM by using
   --with-additional-vms=jamvm
+* Allow the location of the JamVM source zip to be specified using
+  --with-jamvm-src-zip
 * Import of OpenJDK6 b21 including upgrade to HotSpot 19
   - S6961870: More rebranding fixes for templates/gpl-*-header files
   - S6976186: Shark build system changes
